<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="350dp">


    <Button
        android:id="@+id/bt_login"
        style="@style/bt_yellow_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/name_login"
        android:textColor="@color/colorWhite"
        android:transitionName="loginBtn"
        app:layout_constraintBottom_toTopOf="@+id/tv_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:padding="30dp"
        android:text="@string/name_register"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.shashiwang.shashiapp.customizeview.LoginEditText
        android:id="@+id/ev_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/greyColor"
        app:hint_content="@string/hint_login_count"
        app:input_type="2"
        app:left_icon="@drawable/ic_count"
        app:layout_constraintBottom_toTopOf="@+id/ev_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </com.shashiwang.shashiapp.customizeview.LoginEditText>

    <com.shashiwang.shashiapp.customizeview.LoginEditText
        android:id="@+id/ev_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textColorHint="@color/greyColor"
        app:hint_content="@string/hint_login_password"
        app:input_type="4"
        app:layout_constraintBottom_toTopOf="@+id/bt_login"
        app:layout_constraintEnd_toEndOf="@+id/ev_count"
        app:layout_constraintStart_toStartOf="@+id/ev_count"
        app:left_icon="@drawable/ic_password"
        app:right_icon="@drawable/ic_close_eye">

    </com.shashiwang.shashiapp.customizeview.LoginEditText>

</android.support.constraint.ConstraintLayout>