<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView10"
                style="@style/style_post_pop_text"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/post_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                style="@style/view_line"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView11"
                style="@style/style_post_pop_text"
                android:layout_marginTop="20dp"
                android:text="@string/post_price"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/view" />


            <View
                android:id="@+id/view2"
                style="@style/view_line"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <View
                android:id="@+id/view3"
                style="@style/view_line"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <View
                android:id="@+id/view4"
                style="@style/view_line"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <View
                android:id="@+id/view6"
                style="@style/view_line"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView12"
                style="@style/style_post_pop_text"
                android:layout_marginTop="20dp"
                android:text="@string/post_location"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/textView13"
                style="@style/style_post_pop_text"
                android:layout_marginTop="20dp"
                android:text="@string/post_connect"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/textView14"
                style="@style/style_post_pop_text"
                android:layout_marginTop="20dp"
                android:text="@string/post_phone"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <TextView
                android:id="@+id/textView15"
                style="@style/style_post_pop_text"
                android:layout_marginTop="20dp"
                android:text="@string/post_message"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/view6" />

            <EditText
                android:maxEms="10"
                android:maxLines="1"
                android:hint="@string/post_hint_factory"
                android:id="@+id/editText"
                style="@style/editText_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

            <EditText
                android:id="@+id/editText2"
                style="@style/editText_normal"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toTopOf="@+id/textView11"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/editText2"
                app:layout_constraintTop_toTopOf="@+id/textView12"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView16"
                style="@style/style_post_pop_text"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="@string/post_choose"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toStartOf="@+id/imageView6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView16"
                app:srcCompat="@mipmap/ic_launcher" />

            <EditText
                android:maxEms="10"
                android:maxLines="1"
                android:id="@+id/editText3"
                style="@style/editText_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/textView13" />

            <EditText
                android:maxEms="10"
                android:maxLines="1"
                style="@style/editText_normal"
                android:id="@+id/editText4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editText3"
                app:layout_constraintTop_toTopOf="@+id/textView14" />

            <EditText
                style="@style/editText_normal"
                android:id="@+id/editText5"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editText4"
                app:layout_constraintTop_toTopOf="@+id/textView15"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/button9"
            style="@style/button_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="64dp"
            android:text="@string/post_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>